test/corpus/errors.txt
===================================
Text starting with curly brace
===================================
{test}
---

(document
  (ERROR
    (name)))

===================================
Text starting with backet
===================================
[test]
---

(document
  (ERROR
    (name)))

===================================
Fixme: Text with special characters
===================================
This {text} without tags should be [allowed].
---
(document
  (ERROR
    (text)
    (name)
    (name)
    (name)
    (name)
    (name)
    (name)
    (UNEXPECTED '.')))
