test/corpus/statements.txt
===================================
Basic Tag (no paragraph)
===================================
@span{Hello}
---

(document
  (p
    (tag
      (tag_name)
      (text)
    )))

===================================
Tags with Text
===================================
This is @i{my} text: @span{Hello}!
---

(document
  (p
    (text)
    (tag
      (tag_name)
      (text))
    (text)
    (tag
      (tag_name)
      (text))
    (text)))

===================================
Text with Nested Tags
===================================
This is @span{my @i{nested} tag}.
---

(document
  (p
    (text)
    (tag
      (tag_name)
      (text)
      (tag
        (tag_name)
        (text))
      (text))
    (text)))

===================================
Tags with Attributes (no paragraph)
===================================
@span[id=one name="my [name]"]{Hello}
---

(document
  (tag
    name: (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (attribute_value))
      (attribute
        (attribute_name)
        (quoted_attribute_value (attribute_value))))
    text: (text))
)
